--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
 }
+
+
 a{
   color: inherit;
   text-decoration: unset;
@@ -21,6 +23,7 @@ body{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  margin-top: 10px;
 }
 .footer-logo img{
   height: 50px;
@@ -175,6 +178,7 @@ section{
   display: flex;
   flex-direction: column;
   align-items: initial;
+  font-size: 18px;
 }
 .form-container{
   background-color: rgba(70, 70, 70, 0.5);
@@ -334,3 +338,139 @@ footer{
   from {opacity: .4}
   to {opacity: 1}
 }
+@media only screen and (max-width: 768px){
+  section{
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  #section-logo{
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .logo-top{
+    width: 250px;
+  }
+  .background-section-one {
+    height: 60vh;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .menu-item {
+    width: 200px;
+    background-color: rgba(70, 70, 70, 0.5);
+    text-align: center;
+    height: 45px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Tourney', Helvetica, sans-serif;
+    font-size: 22px;
+  }
+  .bf-container img {
+    width: 400px;
+  }
+  #timer {
+    font-size: 40px;
+    color: orangered;
+  }
+  .blackfriday {
+    font-size: 24px;
+    text-align: center;
+    line-height: 36px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .promotion {
+    font-size: 24px;
+    text-align: center;
+    color: #fff;
+    font-family: Tourney;
+    font-weight: bold;
+    line-height: 30px;
+  }
+  .background-section-three {
+    width: 100%;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
+    margin-top: 0px;
+  }
+  .promotion {
+    font-size: 24px;
+    text-align: center;
+    color: #fff;
+    font-family: Tourney;
+    font-weight: bold;
+    line-height: 30px;
+    margin-bottom: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+  .slideshow-container {
+    max-width: 50%;
+    position: relative;
+    margin: auto;
+    font-family: Helvetica, Tahoma, sans-serif;
+    min-width: 350px;
+  }
+  .mySlides {
+    display: none;
+    max-height: 420px;
+  }
+  .card-container {
+    height: 480px;
+    width: 100%;
+    background-color: rgba(70, 70, 70, 0.8);
+    padding: 30px;
+    min-width: 300px;
+  }
+  .card-container img {
+    width: 280px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .text {
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+    position: absolute;
+    bottom: 5px;
+    width: 100%;
+    text-align: center;
+  }
+  .background-section-four {
+    width: 100%;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #000;
+    color: #fff;
+    box-shadow: -10px -40px 15px #000;
+    margin-bottom: 20px;
+    margin-top: 80px;
+    font-family: Helvetica, sans-serif;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: initial;
+    font-size: 18px;
+}
+  .footer-logo img {
+    height: 30px;
+  }
+
+} 
